# gears

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: main.yml  release.yml
docs/: Makefile  api.rst  conf.py  getting-started.rst  glossary.rst  index.rst  root-directory.rst  workspace.rst
opt/: terraform.toml
prototypes/: get-bin.py
src/gears/: __init__.py  cli.py  core.py  models.py  modls.py  settings.py  templates.py
src/gears/templates/: settings.toml.j2
tests/: test_it.py  test_settings.py
tools/: cli.py
