[project]
name = "gears"
version = "0.0.0"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
dependencies = [
    "click>=8",
]
readme = "README.rst"
requires-python = ">= 3.11"
license = {file = "LICENSE"}
dynamic = ["description"]

[project.scripts]
gears = "gears.cli:main"

[project.urls]
Repository = "https://github.com/attakei-lab/gears"

[project.optional-dependencies]
docs = [
    "sphinx>=7.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller==6.*",
    "pytest==7.*",
]

[tool.hatch.metadata]
allow-direct-references = true
