[project]
name = "gears"
version = "0.0.0"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
dependencies = [
    "click>=8",
]
readme = "README.rst"
requires-python = ">= 3.11"
license = {file = "LICENSE"}
dynamic = ["description"]

[project.scripts]
gears = "gears.cli:main"

[project.urls]
Repository = "https://github.com/attakei-lab/gears"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller==6.*",
]

[tool.hatch.metadata]
allow-direct-references = true
