[project]
name = "gears"
version = "0.0.0"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
dependencies = [
    "click>=8",
    "pydantic-settings>=2.1.0",
]
readme = "README.rst"
requires-python = ">= 3.11"
license = {file = "LICENSE"}
dynamic = ["description"]

[project.scripts]
gears = "gears.cli:main"

[project.urls]
Repository = "https://github.com/attakei/gears"

[project.optional-dependencies]
docs = [
    "sphinx>=7.2.6",
    "sphinx-autobuild==2021.3.14",
    "sphinx-rtd-theme==2.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["D"]
ignore = ["D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller==6.*",
    "pytest==7.*",
]

[tool.hatch.metadata]
allow-direct-references = true
